--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Kainoa Seaman</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link href="cover.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Belleza&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">  </head>
   <body class="d-flex h-100 text-bg-dark">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
@@ -23,8 +23,8 @@
         </header>
 
         <main class="d-flex px-5 flex-column">
-            <div class="rounded-circle bg-light-subtle align-self-center mb-2" id="portrait-placeholder"></div>
-            <h1 class="text-center">Kainoa Seaman</h1>
+            <div class="rounded-circle align-self-center mb-3" id="portrait-placeholder"></div>
+            <h1 class="text-center" id="name"><span>K</span>AINOA <span>S</span>EAMAN</h1>
             <p class="lead text-justify">Kainoa is a passionate full-stack developer with secondary skills in design, quality assurance, and technical writing. He's designed user interfaces in the React framework, implemented robust frontend codebases with Typescript, and scalable backend applications in Node.js, and .NET. </p>
         </main>
 
