fix heights and padding

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="cover.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Belleza&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">  </head>
-  <body class="d-flex text-bg-dark">
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+  <body class="d-flex h-100 text-bg-dark">
+    <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
-            <div class="navbar fixed-top pt-0 px-4 d-flex justify-content-between flex-sm-row
+            <div class="navbar fixed-top pt-2 px-4 d-flex justify-content-between flex-sm-row
             flex-column">
                 <h3 class="mb-0 logo justify-content-center align-self-center">Ks.</h3>
                 <nav class="nav nav-masthead justify-content-center">
