--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p class="mb-0 mt-4">Inspired by the Bootstrap <a class="text-white" href="https://getbootstrap.com/docs/5.3/examples/cover/#">Cover example</a></p>
+            <p class="p-2 mt-4 text-center">Inspired by the Bootstrap <a class="text-white" href="https://getbootstrap.com/docs/5.3/examples/cover/#">Cover example</a></p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
