--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="cover.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Belleza&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">  </head>
-  <body class="d-flex text-bg-dark">
+  <body class="d-flex bg-dark">
     <div class="cover-container d-flex w-100 mx-auto flex-column">
         <header class="mb-auto">
             <div class="navbar fixed-top pt-2 px-4 d-flex justify-content-between flex-sm-row
@@ -24,13 +24,14 @@
         </header>
 
         <main class="d-flex px-5 flex-column">
-            <div class="rounded-circle align-self-center mt-5 mb-4" id="portrait-placeholder"></div>
-            <h3 class="text-center mb-3" id="name"><span>K</span>AINOA <span>S</span>EAMAN</h1>
-            <p class="lead text-justify">Kainoa is a passionate full-stack developer with secondary skills in design, quality assurance, and technical writing. He's designed user interfaces in the React framework, implemented robust frontend codebases with Typescript, and scalable backend applications in Node.js, and .NET. </p>
+            <img class="rounded-circle align-self-center mt-5 mb-3" id="portrait-placeholder" src="public/portrait-placeholder.jpg">
+            <h3 class="text-center mb-1" id="name"><span>K</span>AINOA <span>S</span>EAMAN</h1>
+            <p class="lead text-center mb-4">Kainoa is a passionate full-stack cloud developer with secondary skills in design, quality assurance, and technical writing.</p>
+            <p class="">He's designed user interfaces in the React framework, implemented robust frontend codebases with Typescript, and scalable backend applications in Node.js, and .NET.</p>
         </main>
 
         <footer class="mt-auto text-white-50">
-            <p class="p-2 mt-4 text-center">Inspired by the Bootstrap <a class="text-white" href="https://getbootstrap.com/docs/5.3/examples/cover/#">Cover example</a></p>
+            <p class="py-1 mt-4 text-center">Inspired by the Bootstrap <a class="text-decoration-none text-white-50" href="https://getbootstrap.com/docs/5.3/examples/cover/#">Cover example</a></p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
