--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <h3 class="text-center mb-1 title" id="name"><span>K</span>AINOA <span>S</span>EAMAN</h1>
             <p class="lead text-center mb-5">Kainoa is a passionate full-stack cloud developer with secondary skills in design, quality assurance, and technical writing.</p>
           </div>
-            <div id="about">
-              <h4 class="title"><span>A</span>BOUT</h4>
+            <div>
+              <h4 class="title" id="about"><span>A</span>BOUT</h4>
               <p class="">Kainoa specializes in designing user interfaces in the React framework, implementing robust frontend codebases with Typescript, and scalable backend applications in Node.js, and .NET.</p>
               <p>In March 2024, Kainoa exited an exciting role with Collabware, where he gained a range of technical skills. He wore many hats, gaining knowledge as a technical writer, QA engineer, frontend engineer, and backend engineer. Armed with his skillset, He's excited for a new chapter.</p>
               <p>Currently, he's been refining his technical skills with a full-stack bootcamp from Udemy, discovering nuances and new trends. Following studies will focus on the .NET framework, for a more specialized skillset.</p>
