--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </main>
 
         <footer class="mt-auto text-white-50">
-            <p class="py-1 mt-4 text-center">Inspired by the Bootstrap <a class="text-decoration-none text-white-50" href="https://getbootstrap.com/docs/5.3/examples/cover/#">Cover example</a></p>
+            <p class="py-1 mt-4 text-center"><small>Inspired by the Bootstrap <a class="text-decoration-none text-white-50" href="https://getbootstrap.com/docs/5.3/examples/cover/#">Cover example</a></small></p>
         </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
