contact section first pass

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
                 <nav class="nav nav-masthead justify-content-center">
                 <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Home</a>
                 <a class="nav-link fw-bold py-1 px-0" href="#about">About</a>
-                <a class="nav-link fw-bold py-1 px-0" href="#">Skills</a>
-                <a class="nav-link fw-bold py-1 px-0" href="#">Work History</a>
+                <a class="nav-link fw-bold py-1 px-0" href="#contact">Contact</a>
                 </nav>
             </div>
         </header>
@@ -29,14 +28,21 @@
             <h3 class="text-center mb-1 title" id="name"><span>K</span>AINOA <span>S</span>EAMAN</h1>
             <p class="lead text-center mb-5">Kainoa is a passionate full-stack cloud developer with secondary skills in design, quality assurance, and technical writing.</p>
           </div>
-            <div>
-              <h4 class="title" id="about"><span>A</span>BOUT</h4>
-              <p class="">Kainoa specializes in designing user interfaces in the React framework, implementing robust frontend codebases with Typescript, and scalable backend applications in Node.js, and .NET.</p>
-              <p>In March 2024, Kainoa exited an exciting role with Collabware, where he gained a range of technical skills. He wore many hats, gaining knowledge as a technical writer, QA engineer, frontend engineer, and backend engineer. Armed with his skillset, He's excited for a new chapter.</p>
-              <p>Currently, he's been refining his technical skills with a full-stack bootcamp from Udemy, discovering nuances and new trends. Following studies will focus on the .NET framework, for a more specialized skillset.</p>
-              <p>Outside of his professional life, Kainoa focuses on his family: his partner, 1 year old boy, and 2 year old pup.</p>
-            </div>
-          </main>
+
+          <div class="mb-5">
+            <h4 class="title" id="about"><span>A</span>BOUT</h4>
+            <p class="">Kainoa specializes in designing user interfaces in the React framework, implementing robust frontend codebases with Typescript, and scalable backend applications in Node.js, and .NET.</p>
+            <p>In March 2024, Kainoa exited an exciting role with Collabware, where he gained a range of technical skills. He wore many hats, gaining knowledge as a technical writer, QA engineer, frontend engineer, and backend engineer. Armed with his skillset, He's excited for a new chapter.</p>
+            <p>Currently, he's been refining his technical skills with a full-stack bootcamp from Udemy, discovering nuances and new trends. Following studies will focus on the .NET framework, for a more specialized skillset.</p>
+            <p>Outside of his professional life, Kainoa focuses on his family: his partner, 1 year old boy, and 2 year old pup.</p>
+          </div>
+
+          <div class="text-center">
+            <h4 class="title" id="contact"><span>C</span>ONTACT</h4>
+            <p><span class="contact title">Phone </span>604-803-2990</p>
+            <p><span class="contact title">Email </span>kaigra@icloud.com</p>
+          </div>
+        </main>
 
         <footer class="mt-auto text-white-50">
             <p class="py-1 mt-4 text-center"><small>Inspired by the Bootstrap <a class="text-decoration-none text-white-50" href="https://getbootstrap.com/docs/5.3/examples/cover/#">Cover example</a></small></p>
