--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
           <div class="text-center">
             <h4 class="title" id="contact"><span>C</span>ONTACT</h4>
-            <p><span class="contact title">Phone </span>604-803-2990</p>
+            <p class="mb-1"><span class="contact title">Phone </span>604-803-2990</p>
             <p><span class="contact title">Email </span>kaigra@icloud.com</p>
           </div>
         </main>
