change contact link styling

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
           <div class="text-center">
             <h4 class="title" id="contact"><span>C</span>ONTACT</h4>
-            <p class="mb-1"><span class="contact title">Phone </span>604-803-2990</p>
-            <p><span class="contact title">Email </span>kaigra@icloud.com</p>
+            <p class="mb-1"><span class="contact title">Phone </span><span class="text-decoration-none">604-803-2990</span></p>
+            <p><span class="contact title text-decoration-none">Email </span><a id="email" class="text-decoration-none" href="mailto:kaigra@icloud.com">kaigra@icloud.com</a></p>
           </div>
         </main>
 
