Testimonials on main page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <nav class="nav nav-masthead justify-content-center">
                 <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#home">Home</a>
                 <a class="nav-link fw-bold py-1 px-0" href="#about">About</a>
+                <a class="nav-link fw-bold py-1 px-0" href="#testimonials">Testimonials</a>
                 <a class="nav-link fw-bold py-1 px-0" href="#contact">Contact</a>
                 </nav>
             </div>
@@ -71,12 +72,48 @@
             <p>Currently, he's been refining his technical skills with a full-stack bootcamp from Udemy, discovering nuances and new trends. Following studies will focus on the .NET framework, for a more specialized skillset.</p>
             <p>Outside of his professional life, Kainoa focuses on his family: his partner, 1 year old boy, and 2 year old pup.</p>
           </div>
+          
+          <div class="testimonials mb-5">
+            <h4 class="title" id="testimonials"><span>T</span>ESTIMONIALS</h4>
+            <p>Here is a couple instances of positive and anonymous feedback I've received from my professional life.</p>
+            <figure>
+              <p>"Kainoa excels in seeking clarification when faced with uncertainty. Instead of passively avoiding the unknown, he actively engages in the learning process by proactively asking pertinent questions. His testing approach is characterized by thoroughness, consistently revealing additional issues or bugs that may have been overlooked by the testing suite or were not initially considered by the team. Kainoa's commitment to going above and beyond in both learning and testing contributes significantly to the overall quality of our work."</p>
+              <figcaption class="blockquote-footer">
+                Co-worker at <cite title="Source Title">Collabware</cite>
+              </figcaption>
+            </figure>
+            <figure>
+              <p>"Kainoa is really good at following through with the requirements he is given when it comes to his work. He is fully committed to making sure that each requirement is met and takes the required time and care that the issues need to make sure that they are carried out properly. Kainoa has a really vast knowledge of the system..."</p>
+              <figcaption class="blockquote-footer">
+                Co-worker at <cite title="Source Title">Collabware</cite>
+              </figcaption>
+            </figure>
+            <figure>
+              <p>"Kainoa is a diligent worker that can context switch where needed, he really is a swiss army knife of a player for the company. I really enjoy working with him as he has a great eye for detail and bouncing ideas off him is beneficial and seamless"</p>
+              <figcaption class="blockquote-footer">
+                Co-worker at <cite title="Source Title">Collabware</cite>
+              </figcaption>
+            </figure>
+            <figure>
+              <p>"Kainoa is a great team player. No matter the task, he is always there to offer support in any way he can. He is very vocal in his opinions and contributes lots to group discussions..."</p>
+              <figcaption class="blockquote-footer">
+                Co-worker at <cite title="Source Title">Collabware</cite>
+              </figcaption>
+            </figure>
+            <figure>
+              <p>"Kainoa is one of the most personable/approachable people that I have met in Collabware. He is a very easy person to talk to and find mutual ground on almost any topic."</p>
+              <figcaption class="blockquote-footer">
+                Co-worker at <cite title="Source Title">Collabware</cite>
+              </figcaption>
+            </figure>
+          </div>
 
           <div class="text-center">
             <h4 class="title" id="contact"><span>C</span>ONTACT</h4>
             <p class="mb-1"><span class="contact title">Phone </span><a class="text-decoration-none text-white-50" href="tel:6048032990">604-803-2990</a></p>
             <p><span class="contact title text-decoration-none">Email </span><a id="email" class="text-decoration-none" href="mailto:kaigra@icloud.com">kaigra@icloud.com</a></p>
           </div>
+
         </main>
 
         <footer class="mt-auto text-white-50">
