--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <meta property="og:image" content="public/portrait-placeholder.jpg" />
+    <meta property="og:image" content="https://kainoa.ca/public/portrait-placeholder.jpg" />
     <meta property="og:title" content="Hi there! 👋🏻" />
     <meta property="og:description" content="Check out my socials and some of my professional works." />
     <title>Kainoa Seaman</title>
