--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
           <div id="home" class="d-flex flex-column">
             <img class="rounded-circle align-self-center mt-5 mb-3" id="portrait-placeholder" src="public/portrait-placeholder.jpg">
             <h3 class="text-center mb-1 title" id="name"><span>K</span>AINOA <span>S</span>EAMAN</h1>
-            <p class="lead text-center">Kainoa is a passionate full-stack cloud developer with secondary skills in design, quality assurance, and technical writing.</p>
-            <div class="icons-container mb-5 d-flex justify-content-center">
+            <p class="lead text-center">Kainoa is a passionate full stack cloud developer with secondary skills in design, quality assurance, and technical writing.</p>
+            <p class="lead text-center">Check out his github portfolio, visit his social pages, or contact using the icons below 👇🏼</p>
+            <div class="icons-container mb-5 d-flex justify-content-center bg-dark py-2">
               <a href="https://www.linkedin.com/in/kainoa-seaman/">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-linkedin mx-2" viewBox="0 0 16 16">
                     <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
