--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <main class="d-flex px-5 flex-column">
           <div id="home" class="d-flex flex-column">
-            <img class="rounded-circle align-self-center mt-4 mb-3" id="portrait-placeholder" src="public/portrait-placeholder.jpg">
+            <img class="rounded-circle align-self-center my-3" id="portrait-placeholder" src="public/portrait-placeholder.jpg">
             <h3 class="text-center mb-1 title" id="name"><span>K</span>AINOA <span>S</span>EAMAN</h1>
             <p class="lead text-center">Kainoa is a passionate full stack cloud developer with secondary skills in design, quality assurance, and technical writing.</p>
             <p class="lead text-center">Check out his github portfolio, visit his social pages, or contact using the icons below 👇🏼</p>
