move icon container up a bit

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img class="rounded-circle align-self-center my-3" id="portrait-placeholder" src="public/portrait-placeholder.jpg">
             <h3 class="text-center mb-1 title" id="name"><span>K</span>AINOA <span>S</span>EAMAN</h1>
             <p class="lead text-center">Kainoa is a passionate full stack cloud developer with secondary skills in design, quality assurance, and technical writing.</p>
-            <p class="lead text-center">Check out his github portfolio, visit his social pages, or contact using the icons below 👇🏼</p>
+            <p class="lead text-center mb-2">Check out his github portfolio, visit his social pages, or contact using the icons below 👇🏼</p>
             <div class="icons-container mb-5 d-flex justify-content-center bg-dark py-2">
               <a href="https://www.linkedin.com/in/kainoa-seaman/">
                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-linkedin mx-2" viewBox="0 0 16 16">
