grammar; delete unused image

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <p class="">Kainoa specializes in designing user interfaces in the React framework, implementing robust frontend codebases with Typescript, and scalable backend applications in Node.js, and .NET.</p>
             <p>In March 2024, Kainoa exited an exciting role with Collabware, where he gained a range of technical skills. He wore many hats, gaining knowledge as a technical writer, QA engineer, frontend engineer, and backend engineer. Armed with his skillset, he's excited for a new chapter.</p>
             <p>Currently, he's been refining his technical skills with a full-stack bootcamp from Udemy, discovering nuances and new trends. Following studies will focus on the .NET framework, for a more specialized skillset.</p>
-            <p>Outside of his professional life, Kainoa focuses on his family: his partner, 1 year old boy, and 2 year old pup.</p>
+            <p>Outside of his professional life, Kainoa focuses on his family: his partner, his one year old boy, and two year old pup.</p>
           </div>
           
           <div class="testimonials mb-5">
