index stylesheet refereces updated

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta property="og:description" content="Hey I'm Kainoa 👋🏻 I work as a full stack developer in British Columbia, Canada. Check out my socials and some of my professional works." />
     <title>Kainoa Seaman</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link href="cover.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Belleza&family=Cardo:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">  </head>
   <body class="d-flex bg-dark">
-    <div class="cover-container d-flex w-100 mx-auto flex-column">
+    <div class="body-container d-flex w-100 mx-auto flex-column">
         <header class="mb-auto">
             <div class="navbar fixed-top pt-2 px-4 d-flex justify-content-between flex-sm-row
             flex-column bg-dark">
