--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div id="home" class="d-flex flex-column">
             <img class="rounded-circle align-self-center my-3" id="portrait-placeholder" src="public/portrait-placeholder.jpg">
             <h3 class="text-center mb-1 title" id="name"><span>K</span>AINOA <span>S</span>EAMAN</h1>
-            <p class="lead text-center">Kainoa is a passionate full stack cloud developer with secondary skills in design, quality assurance, and technical writing.</p>
+            <p class="lead text-center">Kainoa embodies grit, creative problem-solving, and emotional intelligence in personal and professional contexts. He's a versatile full-stack developer, with secondary expertise in Azure cloud, quality assurance, and technical writing. He's a knowledge seeker and avid learner.</p>
             <p class="lead text-center mb-2">Check out his github portfolio, visit his social pages, or contact using the icons below 👇🏼</p>
             <div class="icons-container mb-5 d-flex justify-content-center bg-dark py-2">
               <a href="https://www.linkedin.com/in/kainoa-seaman/">
